Polish. Improve alignment with 9.0.x/8.5.x